# my_garfieldpp

./: CMakeLists.txt  chamber_transfer_function.txt  idea_chamber.C
IDEA_DCH/: CMakeLists.txt  chamber_transfer_function.txt  he_90_ic4h10_10_1atm_100Vto200Kv_pcm.gas  idea_chamber.C
gas_generation/: CMakeLists.txt  generate_he_ic4h10.C
